--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -901,7 +901,8 @@ commands.
    ("C-c w v" . split-window-right)
    ("C-c w b" . balance-windows)
    ("C-c w d" . delete-window)
-   ("C-c w C-d" . delete-other-windows))
+   ("C-c w C-d" . delete-other-windows)
+   ("C-c w M-d" . kill-buffer-and-window))
 #+END_SRC
 
 Resizing a window by characters or pixels is slow. Resize windows in
