--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -917,8 +917,7 @@ steps.
     "Resize selected window.
   Unless SHRINK is nil, shrink window, else, grow window.  Unless
   VERTICAL is nil, resize vertically, else, resize horizontally."
-    (let* ((geometry (frame-monitor-attribute 'geometry))
-           (width (nth 2 geometry))
+    (let* ((width (nth 2 (frame-monitor-geometry)))
            (step (/ width koek-wind/n-hor-steps))
            (delta (if shrink
                       (* step -1)
