[emacs] Simplify case pattern.

--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -3167,7 +3167,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                       (number-to-string (alist-get cat n-diags 0))
                       'face (flymake--lookup-type-property cat 'mode-line-face)))
                    '(flymake-error flymake-warning) " ")))
-               (`,state
+               (state
                 (koek-ml/state-to-description state))))))
       "Flymake mode line construct.")
 
