--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -3089,11 +3089,20 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
 
     (defconst koek-ml/position
       '(:eval
-        `("" koek-ml/large-separator
-          ,(when (buffer-narrowed-p)
-             (list (moody-ribbon "Narrowed" nil 'up) " "))
-          "%p" " " "%l,%c"))
+        (unless (derived-mode-p 'pdf-view-mode)
+          `("" koek-ml/large-separator
+            ,(when (buffer-narrowed-p)
+               (list (moody-ribbon "Narrowed" nil 'up) " "))
+            "%p" " " "%l,%c")))
       "Position mode line construct.")
+
+    (defconst koek-ml/pdf
+      '(:eval
+        (when (derived-mode-p 'pdf-view-mode)
+          `("" koek-ml/large-separator
+            ,(format "%d/%d"
+                     (pdf-view-current-page) (pdf-cache-number-of-pages)))))
+      "PDF-tools mode line construct.")
 
     (defconst koek-ml/exwm-input
       '(:eval
@@ -3300,7 +3309,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                     koek-ml/eldoc koek-ml/ace koek-ml/ediff
                     koek-ml/depth koek-ml/exwm-workspaces koek-ml/eyebrowse
                     koek-ml/id koek-ml/state
-                    koek-ml/position koek-ml/exwm-input koek-ml/input
+                    koek-ml/position koek-ml/pdf koek-ml/exwm-input koek-ml/input
                     koek-ml/flymake koek-ml/vc koek-ml/task koek-ml/modes)))
 #+END_SRC
 
