--- a/emacs/.emacs.d/50-general.org
+++ b/emacs/.emacs.d/50-general.org
@@ -1832,6 +1832,15 @@ For news feeds, see [[file:90-personal.org::*News feeds][News feeds]].
     (pdf-loader-install 'no-ask 'no-install-deps))
 #+END_SRC
 
+*** saveplace-pdf-view - Restore page on revisit
+[[https://github.com/nicolaisingh/saveplace-pdf-view][saveplace-pdf-view (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package saveplace-pdf-view
+    :straight t
+    :after pdf-view)
+#+END_SRC
+
 ** shr - HTML viewer
 Shr is used by other packages (e.g. [[*mu4e - E-mail client][mu4e]] and [[*elfeed - News reader][elfeed]]) to render HTML.
 
